# cdn_fastApi

./: .gitignore  README.md  dockerfile  download_cover.py  ecosystem.config.js  main.py  pyproject.toml
cdn_fastapi/: .gitignore
cdn_fastapi/controllers/: client.py
public/: index.html
test/: text_search.py
